--- a/Index.HTML
+++ b/Index.HTML
@@ -3,33 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome page</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Welcome</title>
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-   
-    <div class="login-card">
-      <div class="header-image">
-        <img src="loginpage.jpg" alt="Background Leaves">
+    <div class="welcome-card">
+      <div class="image-section">
+        <img src="Welcomeimg.jpg" alt="Hands in Soil" />
+        <div class="welcome-text">WELCOME</div>
       </div>
-      <div class="login-content">
-        <div class="Logo">
-          <img src="Logocropped.png" alt="logoimage">
-        </div>
-        <h2>GreenGenie</h2>
-        <h3>Welcome Back</h3>
-        <p>Log in to your account</p>
-        <form>
-          <input type="text" placeholder="  " required />
-          <input type="password" placeholder="Password" required />
-          <div class="links">
-            <a href="#">Forgot Password?</a>
-          </div>
-          <button type="submit">Log In</button>
-        </form>
-        <p class="signup">Don't have an account? <a href="#">Sign up</a></p>
+      <div class="form-section">
+        <input type="text" placeholder="Enter your mobile no" />
+        <button>SEND OTP</button>
       </div>
     </div>
   </div>
 </body>
 </html>
+    
