--- a/index.HTML
+++ b/index.HTML
@@ -3,15 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GreenGenie - Farm at Your Fingertips</title>
-     <link rel="stylesheet" href="style.css"/>
+    <title>What are you looking for?</title>
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-    <div class="container">
-      <div class="content">
-    <h1>GreenGenie</h1>
-    <p>Farm at your fingertips</p>
-    <button class="get-started-btn">Get Started</button>
+  <div class="items-container">
+    <header>
+      <span class="back-btn">&#8592;</span>
+      <h2>What are you<br>looking for?</h2>
+      <span class="cart-btn">&#128722;</span>
+    </header>
+
+    <div class="items-grid">
+      <div class="item"><img src="plantimg.webp" alt="Plant"/>
+      <div class="label">Plants</div>
+      </div>
+      <div class="item"><img src="Ferimg.jpg" alt="Fertilizer"/>
+      <div class="label">Fertilizer</div>
+      </div>
+      <div class="item"><img src="Clay_potsimg.webp" alt="Clay pots"/>
+      <div class="label">Clay pots</div>
+      </div>
+      <div class="item"><img src="Seeds_img.webp" alt="Seeds"/>
+      <div class="label">Seeds</div>
+      </div>
+      <div class="item"><img src="Garden_tools.webp" alt="Garden_tools"/>
+      <div class="label">Tools</div>
+      </div>
+      <div class="item"><img src="grow_bags.webp" alt="grow_bags"/>
+      <div class="label">Grow_Bags</div>
+      </div>
+    </div>
   </div>
+</body>
+</html>
 </body>
 </html>
