--- a/Index.HTML
+++ b/Index.HTML
@@ -3,21 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    <title>Water Plants</title>
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-    <div class="welcome-card">
-      <div class="image-section">
-        <img src="Welcomeimg.jpg" alt="Hands in Soil" />
-        <div class="welcome-text">WELCOME</div>
-      </div>
-      <div class="form-section">
-        <input type="text" placeholder="Enter your mobile no" />
-        <button>SEND OTP</button>
-      </div>
+  <div class="container">
+    <div class="top-bar">
+      <h2>Water Plants</h2>
+      <img src="setting-icon.jpg" alt="Settings">
     </div>
+
+    <div class="card">
+      <img src="img1.png" alt="Plant 1">
+      <div class="card-info">
+        <h4>Create with Gardening App</h4>
+        <p>💧150 ml</p>
+      </div>
+      <img class="status-icon" src="https://img.icons8.com/ios-glyphs/30/checked--v1.png" alt="Checked">
+    </div>
+
+    <div class="card">
+      <img src="img2.png" alt="Plant 2">
+      <div class="card-info">
+        <h4>Create with Gardening App</h4>
+        <p>💧150 ml</p>
+      </div>
+      <img class="status-icon" src="https://img.icons8.com/ios-glyphs/30/filled-circle.png" alt="Pending">
+    </div>
+
+    <div class="card">
+      <img src="img3.png" alt="Plant 3">
+      <div class="card-info">
+        <h4>Create with Gardening App</h4>
+        <p>💧150 ml</p>
+      </div>
+      <img class="status-icon" src="https://img.icons8.com/ios-glyphs/30/water.png" alt="Water Now">
+    </div>
+
+    <p class="date">Saturday, May 21</p>
+   <div class="card">
+  <img src="img4.png" alt="Plant 3" class="plant-img" />
+  <div class="card-content">
+    <h3>Create with Gardening App</h3>
+    <p>150 ml</p>
   </div>
+  <img src="navimg3.jpg" alt="Water Drop" class="icon" />
+</div>
+  </div>
+
+  <div class=" plus-btn">+</div>
+
+  <div class="bottom-nav">
+    <img src="navimg5.webp" alt="Home">
+    <img src="navimg3.jpg" alt="Water">
+    <img src="navimg2.jpg" alt="Scan">
+    <img src="navimg1.webp" alt="Plant">
+    <img src="navimg4.webp" alt="Glove">
+  </div>
+
 </body>
 </html>
-    
