--- a/Index.html
+++ b/Index.html
@@ -3,56 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Green Genie-Home</title>
-    <link rel="stylesheet" href="Style.css">
+    <title>Shop Plants</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="app-container">
-    <div class="top-bar">
-      <div class="logo">🌿 GreenGenie</div>
-      <div class="top-icons">
-        <span class="icon">🔔</span>
-        <span class="icon">🛒</span>
+    <div class="container">
+    <header>
+      <h1>Shop<br>Plants</h1>
+      <div class="header-right">
+        <input type="text" placeholder="Search...">
+        <img src="Prologo.png" class="profile-icon" alt="Profile">
       </div>
-    </div>
-    <div class="hero-banner">
-      <img src="Offerimage.jpeg" alt="Exclusive Offer" />
-      <div class="offer-text">
-        <h2>Exclusive Offer</h2>
-        <p>Get your 1st plant <strong>20% off</strong></p>
+    </header>
+    <nav class="tabs">
+      <button class="active">All</button>
+      <button>Indoor</button>
+      <button>Outdoor</button>
+      <button>Garden</button>
+    </nav>
+    <section class="plant-grid">
+      <div class="plant-card">
+        <img src="img1.webp" alt="Cactus envy">
+        <h3>Cactus envy</h3>
+        <p>$65.00</p>
       </div>
-    </div>
-    <div class="search-bar">
-      <input type="text" placeholder="🔍 Search" />
-    </div>
-
-    <div class="categories">
-      <div class="category">Indoor</div>
-      <div class="category">Outdoor</div>
-      <div class="category">Garden</div>
-      <div class="category">Greens</div>
-    </div>
-    <div class="product-list">
-      <div class="product-card">
-        <img src="Plantoos Spider Plant.avif" alt="Spider Plant" />
-        <h4>Spider Plant</h4>
-        <p>$20</p>
+      <div class="plant-card">
+        <img src="img2.jpg" alt="Dephrion">
+        <h3>Dephrion</h3>
+        <p>$65.00</p>
       </div>
-      <div class="product-card">
-        <img src="Green Plant.webp" alt="Green Plant" />
-        <h4>Green Plant</h4>
-        <p>$25</p>
+      <div class="plant-card">
+        <img src="img3.jpg" alt="White Lender">
+        <h3>White Lender</h3>
+        <p>$65.00</p>
       </div>
-    </div>
-
-    <div class="bottom-nav">
-      <span class="nav-icon">🏠</span>
-      <span class="nav-icon">📦</span>
-      <span class="nav-icon">❤️</span>
-      <span class="nav-icon">👤</span>
-    </div>
-
+      <div class="plant-card">
+        <img src="img4.jpg" alt="Morning Be">
+        <h3>Morning Be</h3>
+        <p>$65.00</p>
+      </div>
+      <div class="plant-card">
+        <img src="img5.jpg" alt="Dorley Plant">
+        <h3>Dorley Plant</h3>
+        <p>$65.00</p>
+      </div>
+      <div class="plant-card">
+        <img src="img6.jpg" alt="Dahlia Flower">
+        <h3>Dahlia Flower</h3>
+        <p>$65.00</p>
+      </div>
+    </section>
   </div>
+
+  
+   <div class="bottom-nav">
+    <img src="navimg5.webp" alt="Home">
+    <img src="navimg3.jpg" alt="Water">
+    <img src="navimg2.jpg" alt="Scan">
+    <img src="navimg1.webp" alt="Plant">
+    <img src="navimg4.webp" alt="Glove">
+  </div>  
+
 </body>
 </html>
     
