--- a/index.HTML
+++ b/index.HTML
@@ -3,39 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What are you looking for?</title>
-    <link rel="stylesheet" href="Style.css">
+    <title>Flower Card</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="items-container">
-    <header>
-      <span class="back-btn">&#8592;</span>
-      <h2>What are you<br>looking for?</h2>
-      <span class="cart-btn">&#128722;</span>
-    </header>
+    <div class="container">
+    <button class="back-button" onclick="history.back()">&#8592;</button>
 
-    <div class="items-grid">
-      <div class="item"><img src="plantimg.webp" alt="Plant"/>
-      <div class="label">Plants</div>
-      </div>
-      <div class="item"><img src="Ferimg.jpg" alt="Fertilizer"/>
-      <div class="label">Fertilizer</div>
-      </div>
-      <div class="item"><img src="Clay_potsimg.webp" alt="Clay pots"/>
-      <div class="label">Clay pots</div>
-      </div>
-      <div class="item"><img src="Seeds_img.webp" alt="Seeds"/>
-      <div class="label">Seeds</div>
-      </div>
-      <div class="item"><img src="Garden_tools.webp" alt="Garden_tools"/>
-      <div class="label">Tools</div>
-      </div>
-      <div class="item"><img src="grow_bags.webp" alt="grow_bags"/>
-      <div class="label">Grow_Bags</div>
+    <div class="card">
+      <div class="card-image"></div>
+
+      <div class="card-content">
+        <h2>Alexandra</h2>
+        <p class="subheading">Create an Aepod</p>
+        <h4>Description</h4>
+        <p class="description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+          Tortor sed tellus fusce laoreet facilisi urna imperdiet. 
+          Quis potenti ut odio auctor mollis enim scelerisque.
+        </p>
+
+        <div class="price-row">
+          <span class="price">$ 65.00</span>
+          <button class="checkout-btn">Checkout</button>
+        </div>
       </div>
     </div>
   </div>
-</body>
-</html>
+>
+    
 </body>
 </html>
