--- a/index.HTML
+++ b/index.HTML
@@ -3,34 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flower Card</title>
+    <title>Alexandra</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-    <button class="back-button" onclick="history.back()">&#8592;</button>
+    <div class="screen-container">
+    <button class="back-btn" onclick="history.back()">&#8592;</button>
+     <div class="background-img"></div>
+     <div class="product-card">
+      <h2>Alexandra</h2>
+      <p class="subtitle">Create an Aepod</p>
 
-    <div class="card">
-      <div class="card-image"></div>
-
-      <div class="card-content">
-        <h2>Alexandra</h2>
-        <p class="subheading">Create an Aepod</p>
-        <h4>Description</h4>
-        <p class="description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-          Tortor sed tellus fusce laoreet facilisi urna imperdiet. 
-          Quis potenti ut odio auctor mollis enim scelerisque.
-        </p>
-
-        <div class="price-row">
-          <span class="price">$ 65.00</span>
-          <button class="checkout-btn">Checkout</button>
-        </div>
-      </div>
+      <h3>Description</h3>
+      <p class="description">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+        Tortor sed tellus fusce laoreet facilisi urna imperdiet. 
+        Quis potenti ut odio auctor mollis enim scelerisque. 
+        Et, congue odio vulputate purus. Nibh sit nec egestas ac urna at erat est. 
+        Consectetur lorem nulla curabitur sem.
+      </p>
     </div>
+
+   
+    <footer class="info-bar">
+      <div class="info-item">
+        <img src="Navimg1.png" alt="Humidity" />
+        <span>Humidity<br><strong>50%</strong></span>
+      </div>
+      <div class="info-item">
+        <img src="Navimg2.png" alt="Height" />
+        <span>Height<br><strong>73</strong></span>
+      </div>
+      <div class="info-item">
+        <img src="Navimg3.png" alt="Temperature" />
+        <span>Temperature<br><strong>23°C</strong></span>
+      </div>
+    </footer>
   </div>
->
     
 </body>
 </html>
