--- a/index.html
+++ b/index.html
@@ -3,39 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GreenGenie - Sign Up</title>
+    <title>Plant Detail Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="signup-container">
-    <div class="signup-card">
-      <div class="header-image">
-        <img src="page4img.jpg" alt="Leaves Background">
-      </div>
-      <div class="signup-content">
-        <h2>GreenGenie</h2>
-        <form>
-          <input type="email" placeholder="Enter E-mail" required />
-          <input type="password" placeholder="Enter Password" required />
-          <input type="password" placeholder="Confirm Password" required />
-          <p class="terms">
-            By signing up you agree to our
-            <a href="#">terms & conditions</a> and
-            <a href="#">privacy policy</a>.
-          </p>
-          <button type="submit">SIGN UP</button>
-        </form>
+    <div class="container">
+    <div class="image-section">
+      <button class="back-button">&#8592;</button>
+      <img src="img1.png" alt="Plant" />
+    </div>
 
-        <div class="social-signup">
-          <p>or sign up with</p>
-          <div class="social-buttons">
-            <button class="google-btn">Google</button>
-            <button class="facebook-btn">Facebook</button>
-          </div>
-          <p class="login-link">Already have an account? <a href="#">Login</a></p>
+    <div class="content-section">
+      <h2>Even on Urban Excursions</h2>
+      <p class="subtitle">Finding Moments of Calm</p>
+
+      <div class="author">
+        <img src="https://i.pravatar.cc/40" alt="Profile" />
+        <div class="author-info">
+          <span class="name">Shylla Monic</span>
+          <span class="date">2023.01.01</span>
         </div>
+        <button class="follow-btn">+ Follow</button>
+      </div>
+
+      <div class="description">
+        <h3>Description</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tortor sed tellus fusce laoreet facilisi urna. Quis potenti ut odio auctor mollis enim.</p>
       </div>
     </div>
+
+    <div class="bottom-nav">
+      <div class="nav-icon">🏠</div>
+      <div class="nav-icon">🔍</div>
+      <div class="nav-icon center-btn">🛒</div>
+      <div class="nav-icon">❤️</div>
+      <div class="nav-icon">👤</div>
+    </div>
   </div>
+    
 </body>
 </html>
