Added Page13 _GreenGenie

--- a/index.html
+++ b/index.html
@@ -3,41 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plant Detail Page</title>
+    <title>Green Garden</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-    <div class="image-section">
-      <button class="back-button">&#8592;</button>
-      <img src="img1.png" alt="Plant" />
-    </div>
-
-    <div class="content-section">
-      <h2>Even on Urban Excursions</h2>
-      <p class="subtitle">Finding Moments of Calm</p>
-
-      <div class="author">
-        <img src="https://i.pravatar.cc/40" alt="Profile" />
-        <div class="author-info">
-          <span class="name">Shylla Monic</span>
-          <span class="date">2023.01.01</span>
-        </div>
-        <button class="follow-btn">+ Follow</button>
-      </div>
-
-      <div class="description">
-        <h3>Description</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tortor sed tellus fusce laoreet facilisi urna. Quis potenti ut odio auctor mollis enim.</p>
+    <div class="card">
+    <div class="logo-section">
+      <img src="icon1.png" alt="Logo" class="logo" />
+      <div class="title">
+        <h2>Green Garden</h2>
+        <p>Go Green</p>
+        <p>Sidoarjo</p>
       </div>
     </div>
 
-    <div class="bottom-nav">
-      <div class="nav-icon">🏠</div>
-      <div class="nav-icon">🔍</div>
-      <div class="nav-icon center-btn">🛒</div>
-      <div class="nav-icon">❤️</div>
-      <div class="nav-icon">👤</div>
+    <div class="image-box">
+      <img src="Img1.png" alt="Plants" class="main-image" />
+      <div class="dot-indicator">
+        <span class="dot active"></span>
+      </div>
+    </div>
+
+    <div class="description-box">
+      <h3>Description</h3>
+      <p>
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+        industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+        scrambled it to make a type specimen book.
+      </p>
+
+      <button class="btn primary">Masuk</button>
+      <button class="btn outline">Daftar</button>
     </div>
   </div>
     
