--- a/index.html
+++ b/index.html
@@ -3,39 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Green Garden</title>
+    <title>Plant Details - Monstera</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+    <div class="header">
+      <span class="back">&#8592;</span>
+      <h1>GreenGenie</h1>
+      <span class="cart">&#128722;</span>
+    </div>
+
     <div class="card">
-    <div class="logo-section">
-      <img src="icon1.png" alt="Logo" class="logo" />
-      <div class="title">
-        <h2>Green Garden</h2>
-        <p>Go Green</p>
-        <p>Sidoarjo</p>
+      <p class="category">Indoor</p>
+      <h2 class="title">Monstera Adansonii</h2>
+
+      <div class="ratings">
+        <span class="star">⭐ 4.9</span>
+      </div>
+
+      <img class="plant-img" src="Img1.png" alt="Monstera" />
+
+      <div class="details">
+        <div>
+          <p class="label">PRICE</p>
+          <p class="value">$ 15</p>
+        </div>
+        <div>
+          <p class="label">SIZE</p>
+          <p class="value">5” h</p>
+        </div>
+      </div>
+
+      <div class="overview">
+        <h3>Overview</h3>
+        <div class="overview-grid">
+          <div>
+            <p class="label">LIGHT</p>
+            <p class="value">35-40%</p>
+          </div>
+          <div>
+            <p class="label">TEMPERATURE</p>
+            <p class="value">70-75°F</p>
+          </div>
+          <div>
+            <p class="label">WATER</p>
+            <p class="value">250ml</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="about">
+        <h3>About</h3>
+        <p>
+          The Monstera Adansonii grows best in a warm, humid environment. Perfect plant for indoor spaces and offices.
+        </p>
+      </div>
+
+      <div class="add-to-cart">
+        <button>Add to Cart</button>
+        <span>$15</span>
       </div>
     </div>
 
-    <div class="image-box">
-      <img src="Img1.png" alt="Plants" class="main-image" />
-      <div class="dot-indicator">
-        <span class="dot active"></span>
-      </div>
-    </div>
-
-    <div class="description-box">
-      <h3>Description</h3>
-      <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-        industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-        scrambled it to make a type specimen book.
-      </p>
-
-      <button class="btn primary">Masuk</button>
-      <button class="btn outline">Daftar</button>
+    <div class="bottom-nav">
+      <span>🏠</span>
+      <span>💬</span>
+      <span>❤️</span>
+      <span>👤</span>
     </div>
   </div>
-    
 </body>
 </html>
