--- a/index.html
+++ b/index.html
@@ -3,47 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Total Bookings</title>
+    <title>Total Complaints</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="app-wrapper">
+     <div class="app-wrapper">
     <header class="header">
       <button class="back-btn">⬅</button>
-      <h1>Total Bookings</h1>
+      <h1>Total Complaints</h1>
       <select class="filter">
-        <option>Active Bookings</option>
-        <option>Completed</option>
-        <option>Cancelled</option>
+        <option>Active</option>
+        <option>Resolved</option>
       </select>
     </header>
     <main class="container">
-      <h2 class="section-title">Active Bookings</h2>
       <div class="card">
-        <div class="booking-info">
-          <h3>Toby Ramos</h3>
-          <p>Mon, Oct 11 • 06:00 PM</p>
-          <p class="desc">Lorem ipsum dolor sit amet…</p>
+        <div class="complaint-info">
+          <h3>Hamza Shaikh</h3>
+          <p>Mon, Oct 19 • 06:00 PM</p>
+          <p class="desc">Customer was not at their location.</p>
         </div>
-        <span class="status">Scheduled</span>
+        <span class="status pending">Pending</span>
       </div>
 
       <div class="card">
-        <div class="booking-info">
-          <h3>Debbie Meyer</h3>
-          <p>Mon, Oct 11 • 06:00 PM</p>
-          <p class="desc">Lorem ipsum dolor sit amet…</p>
+        <div class="complaint-info">
+          <h3>Hamza Shaikh</h3>
+          <p>Tue, Oct 20 • 11:30 AM</p>
+          <p class="desc">Order delayed due to traffic.</p>
         </div>
-        <span class="status">Scheduled</span>
+        <span class="status resolved">Resolved</span>
       </div>
 
       <div class="card">
-        <div class="booking-info">
-          <h3>Elijah Jefferson</h3>
-          <p>Mon, Oct 11 • 06:00 PM</p>
-          <p class="desc">Lorem ipsum dolor sit amet…</p>
+        <div class="complaint-info">
+          <h3>Hamza Shaikh</h3>
+          <p>Wed, Oct 21 • 02:00 PM</p>
+          <p class="desc">Wrong item delivered.</p>
         </div>
-        <span class="status">Scheduled</span>
+        <span class="status pending">Pending</span>
       </div>
     </main>
   </div>
