--- a/index.html
+++ b/index.html
@@ -3,47 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Total Complaints</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <div class="app-wrapper">
-    <header class="header">
-      <button class="back-btn">⬅</button>
-      <h1>Total Complaints</h1>
-      <select class="filter">
-        <option>Active</option>
-        <option>Resolved</option>
-      </select>
+    <div class="container">
+    <header>
+      <h2>Notifications</h2>
     </header>
-    <main class="container">
-      <div class="card">
-        <div class="complaint-info">
-          <h3>Hamza Shaikh</h3>
-          <p>Mon, Oct 19 • 06:00 PM</p>
-          <p class="desc">Customer was not at their location.</p>
+    <div class="notifications">
+      <div class="notification">
+        <img src="https://i.pravatar.cc/50?img=1" alt="User">
+        <div class="text">
+          <h4>David Silva</h4>
+          <p>He rescheduled Booking Id# 1324523.</p>
         </div>
-        <span class="status pending">Pending</span>
       </div>
 
-      <div class="card">
-        <div class="complaint-info">
-          <h3>Hamza Shaikh</h3>
-          <p>Tue, Oct 20 • 11:30 AM</p>
-          <p class="desc">Order delayed due to traffic.</p>
+      <div class="notification">
+        <img src="https://i.pravatar.cc/50?img=2" alt="User">
+        <div class="text">
+          <h4>Ahmed Sahi</h4>
+          <p>Lorem ipsum dolor sit amet.</p>
         </div>
-        <span class="status resolved">Resolved</span>
       </div>
 
-      <div class="card">
-        <div class="complaint-info">
-          <h3>Hamza Shaikh</h3>
-          <p>Wed, Oct 21 • 02:00 PM</p>
-          <p class="desc">Wrong item delivered.</p>
+      <div class="notification">
+        <img src="https://i.pravatar.cc/50?img=3" alt="User">
+        <div class="text">
+          <h4>Cheryl Kent</h4>
+          <p>Lorem ipsum dolor sit amet.</p>
         </div>
-        <span class="status pending">Pending</span>
       </div>
-    </main>
+
+      <div class="notification">
+        <img src="https://i.pravatar.cc/50?img=4" alt="User">
+        <div class="text">
+          <h4>Samuel Lee</h4>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+      </div>
+    </div>
   </div>
     
 </body>
