--- a/index.html
+++ b/index.html
@@ -3,44 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>New Bookings</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
     <header>
-      <h2>Notifications</h2>
+      <button class="back-btn">&#8592;</button>
+      <h2>New Bookings</h2>
     </header>
-    <div class="notifications">
-      <div class="notification">
-        <img src="https://i.pravatar.cc/50?img=1" alt="User">
-        <div class="text">
-          <h4>David Silva</h4>
-          <p>He rescheduled Booking Id# 1324523.</p>
+    <div class="bookings">
+      <div class="booking-card">
+        <img src="img1.jpg" alt="Map">
+        <div class="details">
+          <h4>Saif Ahmed</h4>
+          <p>Booking ID: 12345</p>
+          <button class="view-btn">View</button>
         </div>
       </div>
 
-      <div class="notification">
-        <img src="https://i.pravatar.cc/50?img=2" alt="User">
-        <div class="text">
-          <h4>Ahmed Sahi</h4>
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-      </div>
-
-      <div class="notification">
-        <img src="https://i.pravatar.cc/50?img=3" alt="User">
-        <div class="text">
-          <h4>Cheryl Kent</h4>
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-      </div>
-
-      <div class="notification">
-        <img src="https://i.pravatar.cc/50?img=4" alt="User">
-        <div class="text">
-          <h4>Samuel Lee</h4>
-          <p>Lorem ipsum dolor sit amet.</p>
+      <div class="booking-card">
+        <img src="img1.jpg" alt="Map">
+        <div class="details">
+          <h4>Saif Ahmed</h4>
+          <p>Booking ID: 12346</p>
+          <button class="view-btn">View</button>
         </div>
       </div>
     </div>
