--- a/index.html
+++ b/index.html
@@ -3,34 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Bookings</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-    <header>
-      <button class="back-btn">&#8592;</button>
-      <h2>New Bookings</h2>
+      <div class="app">
+    <header class="topbar">
+      <button class="back" aria-label="Go back">←</button>
+      <h1>Completed Bookings</h1>
     </header>
-    <div class="bookings">
-      <div class="booking-card">
-        <img src="img1.jpg" alt="Map">
-        <div class="details">
-          <h4>Saif Ahmed</h4>
-          <p>Booking ID: 12345</p>
-          <button class="view-btn">View</button>
-        </div>
-      </div>
 
-      <div class="booking-card">
-        <img src="img1.jpg" alt="Map">
-        <div class="details">
-          <h4>Saif Ahmed</h4>
-          <p>Booking ID: 12346</p>
-          <button class="view-btn">View</button>
+    <main class="list">
+      <article class="card">
+        <div class="card-row">
+          <h2 class="name">Toby Ramos</h2>
+          <span class="badge success">Completed</span>
         </div>
-      </div>
-    </div>
+        <div class="meta">
+          <div class="meta-row">
+            <span class="icon">📅</span>
+            <span>Mon, Oct 15 • 08:00 PM</span>
+          </div>
+          <div class="meta-row">
+            <span class="icon">📍</span>
+            <span>Lower Garden District, LA</span>
+          </div>
+        </div>
+      </article>
+
+      <article class="card">
+        <div class="card-row">
+          <h2 class="name">Debbie Meyer</h2>
+          <span class="badge success">Completed</span>
+        </div>
+        <div class="meta">
+          <div class="meta-row">
+            <span class="icon">📅</span>
+            <span>Tue, Oct 16 • 02:30 PM</span>
+          </div>
+          <div class="meta-row">
+            <span class="icon">📍</span>
+            <span>Riverside Park, NY</span>
+          </div>
+        </div>
+      </article>
+
+      <article class="card">
+        <div class="card-row">
+          <h2 class="name">Elijah Jefferson</h2>
+          <span class="badge success">Completed</span>
+        </div>
+        <div class="meta">
+          <div class="meta-row">
+            <span class="icon">📅</span>
+            <span>Wed, Oct 17 • 11:15 AM</span>
+          </div>
+          <div class="meta-row">
+            <span class="icon">📍</span>
+            <span>Downtown, Austin</span>
+          </div>
+        </div>
+      </article>
+    </main>
+
+    <nav class="bottom-nav">
+      <a href="#" class="nav-item" aria-label="Home">🏠</a>
+      <a href="#" class="nav-item" aria-label="Bookings">🗂️</a>
+      <a href="#" class="nav-item active" aria-label="Completed">✅</a>
+      <a href="#" class="nav-item" aria-label="Profile">👤</a>
+    </nav>
   </div>
     
 </body>
