--- a/index.html
+++ b/index.html
@@ -3,56 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Upcoming Bookings</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-    <div class="header">
-      <button class="back-btn">←</button>
-      <h2>Requests</h2>
+   <div class="container">
+    <h2 class="title">📅 Upcoming Bookings</h2>
+    <div class="card">
+      <p><strong>Sait Ahmed</strong></p>
+      <p>⚽ Football Service</p>
+      <p>Mon, Oct 15 - 08:00 PM</p>
+      <p>📍 Riverside Park, NY</p>
+      <div class="map">
+        <img src="img1.jpg" alt="Map 1">
+      </div>
+      <span class="status">Scheduled</span>
     </div>
-    <section class="card">
-      <h3>Bookings Requests</h3>
-      <div class="stat-box">
-        <div class="stat">
-          <p>Total Bookings</p>
-        </div>
-        <div class="actions">
-          <button class="approve">Approve</button>
-          <button class="decline">Decline</button>
-        </div>
+    <div class="card">
+      <p><strong>Sait Ahmed</strong></p>
+      <p>⚽ Football Service</p>
+      <p>Tue, Oct 16 - 11:00 AM</p>
+      <p>📍 Downtown, Austin</p>
+      <div class="map">
+        <img src="img2.jpg" alt="Map 2">
       </div>
-      <div class="stat-box">
-        <div class="stat">
-          <p>Total Customers</p>
-        </div>
-      </div>
-      <div class="stat-box">
-        <div class="stat">
-          <p>Total Gardeners</p>
-        </div>
-      </div>
-    </section>
-    <section class="card">
-      <h3>Gardeners Requests</h3>
-      <div class="request">
-        <div class="info">
-          <h4>Saif Ahmed</h4>
-          <p>Edit Request - Decorative Service</p>
-          <span>Mon, Oct 15 - 06:00 PM</span>
-        </div>
-      </div>
+      <span class="status">Scheduled</span>
+    </div>
 
-      <div class="request">
-        <div class="info">
-          <h4>Saif Ahmed</h4>
-          <p>Upload Request - Decorative Service</p>
-          <span>Mon, Oct 15 - 04:00 PM</span>
-        </div>
-        <img src="img1.png" alt="Plant">
+    <div class="card">
+      <p><strong>Sait Ahmed</strong></p>
+      <p>⚽ Football Service</p>
+      <p>Wed, Oct 17 - 04:00 PM</p>
+      <p>📍 Central Park, NY</p>
+      <div class="map">
+        <img src="img3.jpg" alt="Map 3">
       </div>
-    </section>
+      <span class="status">Scheduled</span>
+    </div>
 
   </div>
 </body>
